--- a/package.json
+++ b/package.json
@@ -31,16 +31,29 @@
     "build": "tsc && chmod 755 build/index.js",
     "prepare": "npm run build",
     "watch": "tsc --watch",
-    "inspector": "npx @modelcontextprotocol/inspector build/index.js"
+    "inspector": "npx @modelcontextprotocol/inspector build/index.js",
+    "generate-client": "node scripts/generate-client.js",
+    "build-cli": "tsc src/cli.ts --outDir build --esModuleInterop true --module es2022 --moduleResolution bundler --target es2022",
+    "cli": "node build/cli.js",
+    "generate-openapi": "tsx src/tools/generate-openapi.ts"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "0.6.0",
     "@roam-research/roam-api-sdk": "^0.10.0",
-    "dotenv": "^16.4.7"
+    "@types/express": "^5.0.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@openapitools/openapi-generator-cli": "^2.7.0",
+    "commander": "^11.1.0",
+    "chalk": "^5.3.0",
+    "@types/commander": "^2.12.2",
+    "tsx": "^4.7.1",
+    "js-yaml": "^4.1.0",
+    "@types/js-yaml": "^4.0.9"
   }
 }
